💄 style: fix hover color for <rt> element in links
Before, it would be invisible on hover.

--- a/sass/parts/_misc.scss
+++ b/sass/parts/_misc.scss
@@ -87,6 +87,10 @@ a:hover {
     color: var(--hover-color);
 }
 
+a:hover rt {
+    color: initial;
+}
+
 a:not(.no-hover-padding):hover::after {
     display: inline-block;
     position: absolute;
